--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version:2.1
 orbs:
  node: circleci/node@2.1.0
 jobs:
@@ -9,33 +9,39 @@ jobs:
  steps:
  - checkout
 
- acceptance_test_1:
-       executor: 
-      name: node/default
-      - node/install-packages:
-          app-dir: ./server
-      - run:
-          command: npm install
-          working_directory: ./server
-      - run:
-          command: npm test
-          working_directory: ./server
-    test2:
-     executor: 
-      name: node/default
-    - run:
-          command: npm install
-          working_directory: ./client
-      - run:
-          command: npm test
-          working_directory: ./client
+ test_1:
+ executor:
+ name: node/default
+ steps:
+ - checkout
+ - node/install-packages:
+ app-dir: ./server
+ - run:
+ command: npm install
+ working_directory: ./server
+ - run:
+ command: npm test
+ working_directory: ./server
+
+ test_2:
+ executor:
+ name: node/default
+ steps:
+ - checkout
+ - run:
+ command: npm install
+ working_directory: ./client
+ - run:
+ command: npm test
+ working_directory: ./client
+
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
-        acceptance_test_1:
-        reguires:
-          -build-and-test
-          test2:
-          requires:
-          -build-and-test
+ build-and-test:
+ jobs:
+ - build
+ - test_1:
+ requires:
+ - build
+ - test_2:
+ requires:
+ - build
