--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,27 @@
-version:
-2.1
+version: 2.1
 orbs:
- node: circleci/node@2.1.0
+  node: circleci/node@2.1.0
 jobs:
- build-and-test:
- build:
- executor:
- name: node/default
- steps:
- - checkout
-
- acceptance_test_1:
- executor:
- name: node/default
- steps:
- - checkout
- - node/install-packages:
- app-dir: ./server
- - run:
- command: npm install
- working_directory: ./server
- - run:
- command: npm test
- working_directory: ./server
-
- acceptance_test_2:
- executor:
- name: node/default
- steps:
- - checkout
- - run:
- command: npm install
- working_directory: ./client
- - run:
- command: npm test
- working_directory: ./client
-
+  build-and-test:
+    executor: 
+      name: node/default
+    steps:
+      - checkout
+      - node/install-packages:
+          app-dir: ./server
+      - run:
+          command: npm install
+          working_directory: ./server
+      - run:
+          command: npm test
+          working_directory: ./server
+      - run:
+          command: npm install
+          working_directory: ./client
+      - run:
+          command: npm test
+          working_directory: ./client
 workflows:
- build-and-test:
- jobs:
- - build
- - acceptance_test_1:
- requires:
- - build
- - acceptance_test_2:
- requires:
- - build
+    build-and-test:
+      jobs:
+        - build-and-test
