--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Build docker containers
-          command: docker-compose up -d
+          command: docker-compose up 
       - node/install-packages:
           app-dir: ./server
       - run:
