--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 WORKDIR /home/node/app
 USER node
 
-COPY --chown=node:node package*.json ./
+COPY --chown=node:node package.json ./
 COPY --chown=node:node package-lock.json ./
 COPY --chown=node:node ./tests ./tests
 RUN npm install 
