--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,17 @@ orbs:
   node: circleci/node@2.1.0
 jobs:
   build-and-test:
-    executor: 
+  build:
+    executor:
       name: node/default
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Build docker containers
-          command: docker-compose up 
+      
+  testServer:
+    executor:
+      name: node/default
+    steps:
+      - checkout
       - node/install-packages:
           app-dir: ./server
       - run:
@@ -19,13 +22,26 @@ jobs:
       - run:
           command: npm test
           working_directory: ./server
+  
+  testKlient:
+    executor:
+      name: node/default
+    steps:
+      - checkout
       - run:
           command: npm install
           working_directory: ./client
       - run:
           command: npm test
           working_directory: ./client
+          
 workflows:
     build-and-test:
       jobs:
-        - build-and-test
+        - build
+        - testServer:
+            requires:
+                - build
+        - testKlient:
+            requires:
+                - build
